// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component should match snapshot as default 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="sm"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="sm"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 2`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="md"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="md"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 3`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="lg"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="lg"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 4`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="xl"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="xl"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all props 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="3rem"
    role="img"
    style="animation-duration: 600ms;"
    viewBox="0 0 32 32"
    width="3rem"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="37.69911184307752"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all speeds 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 900ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all speeds 2`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 750ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all speeds 3`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-animation-name: MQNGw;
  animation-name: MQNGw;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c1 {
  stroke: #020100;
}

<svg
    class="c0"
    height="2rem"
    role="img"
    style="animation-duration: 600ms;"
    viewBox="0 0 32 32"
    width="2rem"
  >
    <circle
      class="c1"
      cx="16"
      cy="16"
      fill="none"
      r="12"
      role="presentation"
      stroke-dasharray="43.982297150257104"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</DocumentFragment>
`;
